# terrabytec

./: .gitignore  .gitmodules  CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cpp  terrabyte.h  terrabyte_engine.cpp  terrabyte_math.h  terrabyte_memory.cpp
